expand seed data, overhaul AI assistant logic